# test_project

./: .gitignore  CMakeLists.txt  README.md  coverage.sh
.github/workflows/: build.yml  test.yml
include/: factorial.hpp  max.hpp  min.hpp
src/: main.cpp
tests/: CMakeLists.txt  main.cpp  second_test_file.cpp
